updated readme and added a size prop

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <youtube-player id="pEUALwkU5b4"></youtube-player>
+  <youtube-player id="pEUALwkU5b4" key="AIzaSyDaCJwIkm0Ap4wn0RAzKt1UdJUH_zStvOo" size="medium"></youtube-player>
 </body>
 
 </html>
